Resolve EUR-56 "Sifflet create source and trigger its update"
# New features and improvements

Implemented source management (creation and updating)

# Related issue

Closes EUR-56

--- a/common/src/test/resources/application.yml
+++ b/common/src/test/resources/application.yml
@@ -20,6 +20,6 @@ springdoc:
     path: /docs
 
 
-token: ${SIFFLET_TOKEN}
-basePath: ${SIFFLET_BASE_PATH}
-sourceUpdateTimeoutSeconds: ${SOURCE_UPDATE_TIMEOUT_SECONDS}
+token: "fake-token"
+basePath: "https://sandbox.siffletdata.com"
+sourceUpdateTimeoutSeconds: 120
