Resolve EUR-65 "Sifflet implement provision"
# New features and improvements

* Implemented the provision and unprovision operations. Provision will upsert the Athena sources and monitors on Sifflet, while unprovision will only unprovision the monitors
* Updated the Dockerfile and helm chart to include the Sifflet CLI and necessary environment variables

# Bug fixes

* Fixes a bug where the SIFFLET_TOKEN would expect a `Bearer XXX` format for source creation, instead of the token only

# Related issue

Closes EUR-65

--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -19,7 +19,9 @@ springdoc:
   swagger-ui:
     path: /docs
 
-
-token: ${SIFFLET_TOKEN}
-basePath: ${SIFFLET_BASE_PATH}
-sourceUpdateTimeoutSeconds: ${SOURCE_UPDATE_TIMEOUT_SECONDS}
+sifflet:
+  token: ${SIFFLET_TOKEN}
+  basePath: ${SIFFLET_BASE_PATH}
+  sourceUpdateTimeoutSeconds: ${SOURCE_UPDATE_TIMEOUT_SECONDS}
+  athena:
+    iamRole: ${SIFFLET_SOURCE_IAM_ROLE}
