--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -7,7 +7,7 @@ dockerRegistrySecretName: regcred
 
 image:
   # -- Image repository
-  registry: registry.gitlab.com/agilefactory/witboost.mesh/provisioning/witboost.mesh.provisioning.javaspecificprovisioner
+  registry: registry.gitlab.com/agilefactory/witboost.mesh/provisioning/witboost.mesh.provisioning.dataquality.sifflet
   # -- Image tag
   tag: to-be-replaced
   # -- The imagePullPolicy for a container and the tag of the image affect when the kubelet attempts to pull (download) the specified image.
