Resolve EUR-70 "Sifflet add endpoint that returns the status of monitors of a specified dataset"
# New features and improvements

Added `/v1/dataQuality` endpoint to return monitor results of an output port.

# Related issue

Closes EUR-70

--- a/helm/files/application.yml
+++ b/helm/files/application.yml
@@ -18,3 +18,10 @@ server:
 springdoc:
   swagger-ui:
     path: /docs
+
+sifflet:
+  token: ${SIFFLET_TOKEN}
+  basePath: ${SIFFLET_BASE_PATH}
+  sourceUpdateTimeoutSeconds: ${SOURCE_UPDATE_TIMEOUT_SECONDS}
+  athena:
+    iamRole: ${SIFFLET_SOURCE_IAM_ROLE}
