--- a/common/pom.xml
+++ b/common/pom.xml
@@ -44,6 +44,7 @@
                         </palantirJavaFormat>
                     </java>
                 </configuration>
+
                 <executions>
                     <execution>
                         <id>maven-spotless-check</id>
@@ -54,6 +55,43 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <version>7.5.0</version>
+                <executions>
+
+                    <execution>
+                        <id>custom-dataquality-server</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>
+                                ${project.basedir}/src/main/resources/custom-dataquality-interface-specification.yml
+                            </inputSpec>
+                            <generatorName>spring</generatorName>
+                            <library>spring-boot</library>
+                            <apiPackage>generated.witboost.mesh.provisioning.dataquality.sifflet.openapi.controller</apiPackage>
+                            <modelPackage>generated.witboost.mesh.provisioning.dataquality.sifflet.openapi.model</modelPackage>
+                            <apiNameSuffix>CustomDataQualityApi</apiNameSuffix>
+                            <supportingFilesToGenerate>
+                                ApiUtil.java
+                            </supportingFilesToGenerate>
+                            <configOptions>
+                                <sourceFolder>/src/main/java</sourceFolder>
+                                <implFolder>/src/main/java</implFolder>
+                                <useSpringBoot3>true</useSpringBoot3>
+                                <delegatePattern>true</delegatePattern>
+                                <unhandledException>true</unhandledException>
+                                <useOptional>true</useOptional>
+                            </configOptions>
+                        </configuration>
+                </execution>
+                </executions>
+        </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
