--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,25 @@
                 <artifactId>logbook-spring-boot-starter</artifactId>
                 <version>3.9.0</version>
             </dependency>
+          <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>10.1.44</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-websocket</artifactId>
+            <version>10.1.44</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-el</artifactId>
+            <version>10.1.44</version>
+          </dependency>
         </dependencies>
     </dependencyManagement>
 
     <build>
-
         <plugins>
             <!-- SpotBugs Plugin -->
             <plugin>
